# socialcap

./: .gitignore
api/: package-lock.json  package.json
api/docker/: Dockerfile
api/prisma/: schema.prisma
api/prisma/migrations/20231115175117_/: migration.sql
api/prisma/migrations/20231115175617_/: migration.sql
api/src/controllers/: communities-controller.ts
api/src/dbs/: community-helpers.ts
api/src/routes/: file-routes.ts
api/src/services/: mina-service.ts
frontend/homepage/src/components/Communities/: index.tsx
frontend/homepage/src/components/Hero/: index.tsx
frontend/homepage/src/components/Navbar/: index.tsx
frontend/homepage/src/components/Waitlist/: SubscribeForm.tsx  (+1 more)
frontend/zkapp/: deploy-devnet.sh  deploy-mainnet.sh  package-lock.json  package.json  rundev.sh  svelte.config.js  svelte.config.spa-js
frontend/zkapp/docker/: Dockerfile  run-docker.sh
frontend/zkapp/src/: app.html  hooks.client.js  no-hooks.server.js
frontend/zkapp/src/routes/: +error.svelte  +layout.svelte  +page.js  +page.svelte
frontend/zkapp/src/styles/: custom.scss
frontend/zkapp/static/css/: custom.min.css  custom.min.css.map
sbt-contracts/: Cargo.toml  Makefile
sbt-contracts/cost/: Cargo.toml  README.md
sbt-contracts/proof-sbt/: Cargo.toml
sbt-contracts/proof-sbt/src/: lib.rs  storage.rs
sbt-contracts/registry/: Cargo.toml
sbt-contracts/registry/src/: lib.rs
sbt-contracts/sbt/: Cargo.toml
sbt-contracts/scripts/testnet/: deploy.sh  integration.sh
server/: package-lock.json  package.json
server/prisma/: seed.ts
server/src/: index.ts
(+54 files in other folders)
