[package]
name = "proof-sbt"
version = "0.1.0"
authors = ["Leandro Manzanal 'leomanzanal@gmail.com'"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

cost = { path = "../cost" }
sbt = { path = "../sbt" }

[dev-dependencies]
pretty_assertions.workspace = true
anyhow.workspace = true
tokio.workspace = true
workspaces.workspace = true
near-primitives.workspace = true
near-units.workspace = true
tracing.workspace = true
