[package]
name = "sbt"
version = "0.1.0"
authors = ["Leandro Manzanal 'leomanzanal@gmail.com'"]
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
near-contract-standards.workspace = true

[dev-dependencies]
